tests/errors/use_undefined_type.eff
type foo = {a : bar; b : integer }

type bar = integer -> integer

